@@ -1,2 +1,3 @@
 usr/bin
-usr/sbin
+usr/share/man/man8
+usr/share/locale
