@@ -1,3 +1,11 @@
+tasksel (1.0-9) frozen unstable; urgency=low
+
+  * Release manager: needed for potato boot-floppies
+  * I18n fixes. tasksel is finally correctly I18n-ized
+  * Polish translations added
+
+ -- Randolph Chung <tausq@debian.org>  Sun,  7 May 2000 13:26:39 -0700
+
 tasksel (1.0-8) frozen unstable; urgency=low
 
   * Changed the Quit button into a Finished button - karlheg.
